2007-07-20

  Adjust btnwait to match NScripter behaviour more closely.  (Further
  tests are required to confirm that this doesn't break any edge
  cases.)


2007-06-20

  Fix an OS X bug causing bundled games to fail.


2007-06-12

  Get the build working on Solaris (a useful benchmark for how well
  things work on less Linux-like platforms) and NetBSD (a useful step
  towards my ultimate goal of a visual novel on every toaster).

  Fix some more MinGW build errors.

  Add the missing `install' target.


2007-06-07

  Fix some errors when mixing internal and system libraries.
  Improve support for FreeBSD.


2007-05-13

  Attempt to detect when a PNG image is using an NScripter-style mask
  area for transparency rather than a PNG alpha channel; add
  command-line flags and compile-time options to force either
  behaviour if auto-detection fails.  This should fix games like
  Tsukihime which were broken by the addition of alpha channel
  support.


2007-05-06

  Fix some bugs: parsing of arguments, saving of vertical text,
  and compilation without INSANI defined.


2007-05-01

  Merge in some more changes from Roine designed to make life better
  for OS X users:

  Include an Xcode project to simplify Mac builds.

  If game resources are not in the app's bundle, look for them in the
  application path instead.

  Store saves and other data under Application Support, not
  Preferences.


2007-04-27

  Merge in Roine's scaling patch.  This is considered experimental,
  and will currently only be enabled if RCA_SCALE is defined at
  compile-time.

  Fix a silly bug in the previous mergings.


2007-04-25

  Merge in an adapted version of the `drawfix' patch to speed up
  screen updates in windowed mode, plus a number of other patches:

  Support both SAR and NSA archives at the same time (zalas)

  Reduce flicker when sprites are changed (Roine Gustafsson)

  Fix gcc detection on OS X (Roine)

  Display missing game data error as a dialog on OS X (Roine)
